--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migrate:postgres": "dotenv -e config/.env.development -- npx prisma migrate deploy",
+    "migrate:generate": "dotenv -e config/.env.development -- npx prisma generate",
+    "dbpush:dev": "dotenv -e config/.env.development -- npx prisma db push ",
+    "dbrestore:dev": "dotenv -e config/.env.development -- npx prisma migrate reset"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.19.1",
+    "bcrypt": "^5.1.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
