--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate:postgres": "dotenv -e config/.env.development -- npx prisma migrate deploy",
+    "migration:dev": "dotenv -e config/.env.development -- npx prisma migrate dev --skip-seed --create-only",
     "migrate:generate": "dotenv -e config/.env.development -- npx prisma generate",
     "dbpush:dev": "dotenv -e config/.env.development -- npx prisma db push ",
     "dbrestore:dev": "dotenv -e config/.env.development -- npx prisma migrate reset"
@@ -27,11 +27,18 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.19.1",
     "bcrypt": "^5.1.1",
+    "connect-pg-simple": "^9.0.1",
+    "express-session": "^1.18.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.12.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "session": "^0.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
