--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "nest build && npm run copy-static",
     "postinstall": "npx prisma generate",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "dev": "NODE_ENV=development nest start --watch",
+    "dev": "npm-run-all --serial set-env start:dev",
+    "start:dev": "dotenv -e config/.env.development -- nodemon",
     "start:debug": "nest start --debug --watch",
-    "prod": "NODE_ENV=production node dist/main",
+    "prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -24,7 +25,10 @@
     "dbpush:dev": "dotenv -e config/.env.development -- npx prisma db push ",
     "dbrestore:dev": "dotenv -e config/.env.development -- npx prisma migrate reset",
     "dbpush:prod": "dotenv -e config/.env.production -- npx prisma db push ",
-    "dbrestore:prod": "dotenv -e config/.env.production -- npx prisma migrate reset"
+    "dbrestore:prod": "dotenv -e config/.env.production -- npx prisma migrate reset",
+    "copy-static": "cpx 'emails/static/**/*' dist/public",
+    "set-env": "cross-env NODE_ENV=development",
+    "email:dev": "email dev"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -32,11 +36,14 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.2",
     "@prisma/client": "^5.19.1",
     "@react-email/components": "^0.0.25",
+    "@react-email/render": "1.0.1",
     "bcrypt": "^5.1.1",
     "connect-pg-simple": "^9.0.1",
     "express-session": "^1.18.0",
+    "npm-run-all": "^4.1.5",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.12.0",
@@ -55,11 +62,15 @@
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "cpx": "^1.5.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
+    "nodemon": "^3.1.4",
     "prettier": "^3.0.0",
+    "react-email": "3.0.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
