--- a/package.json
+++ b/package.json
@@ -43,10 +43,13 @@
     "bcrypt": "^5.1.1",
     "connect-pg-simple": "^9.0.1",
     "express-session": "^1.18.0",
+    "i18next": "^23.15.1",
+    "i18next-fs-backend": "^2.3.2",
     "npm-run-all": "^4.1.5",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.12.0",
+    "react-i18next": "^15.0.1",
     "reflect-metadata": "^0.1.13",
     "resend": "^4.0.0",
     "rxjs": "^7.8.1",
