--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration": "dotenv -e config/.env.development -- npx prisma migrate dev --skip-seed --create-only",
+    "migration": "dotenv -e config/.env.development -- npx prisma migrate dev",
     "prisma:generate": "dotenv -e config/.env.development -- npx prisma generate",
+    "dbpull:dev": "dotenv -e config/.env.development -- npx prisma db pull ",
     "dbpush:dev": "dotenv -e config/.env.development -- npx prisma db push ",
     "dbrestore:dev": "dotenv -e config/.env.development -- npx prisma migrate reset",
     "dbpush:prod": "dotenv -e config/.env.production -- npx prisma db push ",
@@ -31,13 +32,17 @@
     "email:dev": "email dev"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudfront": "^3.709.0",
+    "@aws-sdk/client-s3": "^3.709.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.7",
     "@nestjs/serve-static": "^4.0.2",
-    "@prisma/client": "^5.19.1",
+    "@nestjs/websockets": "^10.4.7",
+    "@prisma/client": "^5.21.1",
     "@react-email/components": "^0.0.25",
     "@react-email/render": "1.0.1",
     "bcrypt": "^5.1.1",
@@ -45,15 +50,19 @@
     "express-session": "^1.18.0",
     "i18next": "^23.15.1",
     "i18next-fs-backend": "^2.3.2",
+    "lucide-react": "^0.460.0",
+    "multer": "^1.4.5-lts.1",
     "npm-run-all": "^4.1.5",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.12.0",
+    "prisma": "^5.21.1",
     "react-i18next": "^15.0.1",
     "reflect-metadata": "^0.1.13",
     "resend": "^4.0.0",
     "rxjs": "^7.8.1",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -67,6 +76,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "cpx": "^1.5.0",
     "cross-env": "^7.0.3",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
